--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Accessidys.GitHub.io</title>
+    <title>AccessiDys facilite la lecture des documents, livres et pages web</title>
   </head>
 
   <body>
@@ -18,13 +18,14 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/cnedDI/AccessiDys.github.io">View on GitHub</a>
 
-          <h1 id="project_title">Accessidys.GitHub.io</h1>
-          <h2 id="project_tagline">Accessidys</h2>
+          <h1 id="project_title">Accessidys</h1>
+          <h2 id="project_tagline">AccessiDys facilite la lecture des documents, livres et pages web</h2>
+     
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/cnedDI/AccessiDys.github.io/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/cnedDI/AccessiDys.github.io/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+              <a href="https://framalistes.org/sympa/subscribe/accessidys">Liste de discussion</a>
+              <a href="mailto:contact.accessidys@framalistes.org">Contact</a>  
+          </section>
         </header>
     </div>
 
