--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
           <h2 id="project_tagline">AccessiDys facilite la lecture des documents, livres et pages web</h2>
      
 
-            <section id="downloads">
-              <a href="https://framalistes.org/sympa/subscribe/accessidys">Liste de discussion</a>
-              <a href="mailto:contact.accessidys@framalistes.org">Contact</a>  
+            <section>
+              <a id="project_tagline" href="https://framalistes.org/sympa/subscribe/accessidys">Liste de discussion</a> |
+              <a id="project_tagline" href="https://trello.com/b/4kIxd74k/accessidys">Tâches en cours</a>  |
+              <a id="project_tagline" href="mailto:contact.accessidys@framalistes.org">Contact</a>  
           </section>
         </header>
     </div>
