--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
      
 
             <section>
-              <a id="project_tagline" href="https://framalistes.org/sympa/subscribe/accessidys">Liste de discussion</a> |
-              <a id="project_tagline" href="https://trello.com/b/4kIxd74k/accessidys">Tâches en cours</a>  |
-              <a id="project_tagline" href="mailto:contact.accessidys@framalistes.org">Contact</a>  
+              <p><a href="https://framalistes.org/sympa/subscribe/accessidys">Liste de discussion</a> |
+              <a href="https://trello.com/b/4kIxd74k/accessidys">Tâches en cours</a>  |
+              <a href="mailto:contact.accessidys@framalistes.org">Contact</a>  </p>
           </section>
         </header>
     </div>
