--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <section>
               <p><a href="https://framalistes.org/sympa/subscribe/accessidys">Liste de discussion</a> |
               <a href="https://trello.com/b/4kIxd74k/accessidys">Tâches en cours</a>  |
+              <a href="https://accessidysteam.slack.com">Slack</a>  |
               <a href="mailto:contact.accessidys@framalistes.org">Contact</a>  </p>
           </section>
         </header>
@@ -63,6 +64,7 @@
 </li>
 <li>Installez votre propre serveur AccessiDys en suivant ces instructions : <a href="https://drive.google.com/open?id=0BzCgA1Terj1ZN1FPSUxSYndMZWc">https://drive.google.com/open?id=0BzCgA1Terj1ZN1FPSUxSYndMZWc</a>
 </li>
+ <li>Rejoignez la liste de discussion et envoyez nous sur le mail de contact une demande pour rejoindre le slack ou le trello.</li>
 </ul>
 
 <p>AccessiDys est un logiciel libre distribué sous la licence Affero General Public License (AGPL) version 3.0, lisez la section Licence plus bas dans ce document pour plus d’information.</p>
