--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 </li>
 <li>Demandez une invitation d’accès au serveur de démonstration AccessiDys en vous inscrivant ici : <a href="https://adapt.cned.fr/">https://adapt.cned.fr/</a>
 </li>
-<li>Signalez une anomalie en remplissant ce formulaire : <a href="https://github.com/cnedDI/accessidys/issues/new">https://github.com/cnedDI/accessidys/issues/new</a>
+<li>Signalez une anomalie en remplissant ce formulaire : <a href="https://
+  .com/acessidys/accessidys/issues/new">https://github.com/accessidys/accessidys/issues/new</a>
 </li>
-<li>Accédez au code source et “forkez-le” : <a href="https://github.com/cnedDI/accessidys">https://github.com/cnedDI/accessidys</a>
+<li>Accédez au code source et “forkez-le” : <a href="https://github.com/accessidys/accessidys">https://github.com/accessidys/accessidys</a>
 </li>
 <li>Installez votre propre serveur AccessiDys en suivant ces instructions : <a href="https://drive.google.com/open?id=0BzCgA1Terj1ZN1FPSUxSYndMZWc">https://drive.google.com/open?id=0BzCgA1Terj1ZN1FPSUxSYndMZWc</a>
 </li>
