--- a/index.html
+++ b/index.html
@@ -146,8 +146,9 @@ Et par le Centre National d’Enseignement à Distance (CNED), BP 80300, 86963 F
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Accessidys.GitHub.io maintained by <a href="https://github.com/cnedDI">cnedDI</a></p>
+        <p class="copyright">Accessidys.GitHub.io maintained by <a href="https://github.com/accessidys">Accessidys</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <script src="https://liberapay.com/accessidys/widgets/receiving.js"></script>
       </footer>
     </div>
 
