--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Et par le Centre National d’Enseignement à Distance (CNED), BP 80300, 86963 F
       <footer class="inner">
         <p class="copyright">Accessidys.GitHub.io maintained by <a href="https://github.com/accessidys">Accessidys</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-       
+        <p>Vous pouvez soutenir Accessidys ici : <script src="https://liberapay.com/accessidys/widgets/receiving.js"></script></p>
       </footer>
     </div>
 
