--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
             <section>
               <p><a href="https://framalistes.org/sympa/subscribe/accessidys">Liste de discussion</a> |
-              <a href="https://trello.com/b/4kIxd74k/accessidys">Tâches en cours au niveau communauté</a>  |
-              <a href="https://accessidysteam.slack.com">Slack</a>  |
+              <a href="https://trello.com/b/4kIxd74k/accessidys">Actions en cours</a>  |
+              <a href="https://accessi.slack.com">Slack</a>  |
               <a href="mailto:contact.accessidys@framalistes.org">Contact</a>  </p>
           </section>
         </header>
