--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <section>
               <p><a href="https://framalistes.org/sympa/subscribe/accessidys">Liste de discussion</a> |
-              <a href="https://trello.com/b/4kIxd74k/accessidys">Actions en cours</a>  |
+              <a href="https://trello.com/b/4kIxd74k/accessidys">Actions en cours</a> et <à href="https://trello.com/invite/b/4kIxd74k/7ab00f86bdd7d2eb99c6d9d39aaedef3/accessidys" >rejoindre le trello </a>
               <a href="https://accessi.slack.com">Slack</a>  |
               <a href="mailto:contact.accessidys@framalistes.org">Contact</a>  </p>
           </section>
