--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
 <strong>Un transformateur de documents</strong> : Rendez vos documents ou pages accessibles aux lecteurs en les important de manière simple et rapide quel que soit le format du fichier d’origine. Qu’il s’agisse d’un fichier PDF numérisé, d’un document Office, d’un livre électronique au format ePub ou d’une page Web traditionnelle, AccessiDys vous permet de transformer votre document pour que les lecteurs bénéficient d’une expérience de lecture totalement personnalisée.</li>
 </ul>
 
+        <p>Vidéo de démonstration de l'application :</p>
+        <p><iframe src="https://drive.google.com/file/d/0BzCgA1Terj1ZTVFNLXRqR0ZFams/preview" width="640" height="480"></iframe></p>
+
 <h3>
 <a id="venez-voyez-et-vainquez-les-difficultés-de-lecture" class="anchor" href="#venez-voyez-et-vainquez-les-difficult%C3%A9s-de-lecture" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Venez, voyez et vainquez les difficultés de lecture.</h3>
 
 <ul>
-<li>Découvrez AccessiDys en action dans cette vidéo de démonstration: <a href="https://drive.google.com/open?id=0BzCgA1Terj1ZTVFNLXRqR0ZFams">https://drive.google.com/open?id=0BzCgA1Terj1ZTVFNLXRqR0ZFams</a>
-</li>
 <li>Demandez une invitation d’accès au serveur de démonstration AccessiDys en vous inscrivant ici : <a href="https://adapt.cned.fr/">https://adapt.cned.fr/</a>
 </li>
 <li>Signalez une anomalie en remplissant ce formulaire : <a href="https://
