--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <a id="venez-voyez-et-vainquez-les-difficultés-de-lecture" class="anchor" href="#venez-voyez-et-vainquez-les-difficult%C3%A9s-de-lecture" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Venez, voyez et vainquez les difficultés de lecture.</h3>
 
 <ul>
-<li>Demandez une invitation d’accès au serveur de démonstration AccessiDys en vous inscrivant ici : <a href="https://adapt.cned.fr/">https://adapt.cned.fr/</a>
+<li>Testez l'application AccessiDys en vous inscrivant ici : <a href="https://accessidys.org/#/signup">https://accessidys.org/#/signup</a>
 </li>
 <li>Signalez une anomalie en remplissant ce formulaire : <a href="https://
   .com/acessidys/accessidys/issues/new">https://github.com/accessidys/accessidys/issues/new</a>
