--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <p><a href="https://framalistes.org/sympa/subscribe/accessidys">Liste de discussion</a> |
               <a href="https://trello.com/b/4kIxd74k/accessidys">Actions en cours</a> |
               <a href="https://accessi.slack.com">Slack</a>  |
-              <a href="mailto:contact.accessidys@framalistes.org">Contact</a>
+              <a href="mailto:contact.accessidys@framalistes.org">Contact</a> |
               <a href="https://github.com/AccessiDys/AccessiDys">Github</a>
               </p>
           </section>
@@ -51,20 +51,20 @@
 </ul>
 
         <p>Vidéo de démonstration de l'application :</p>
-        <p><iframe src="https://drive.google.com/file/d/0BzCgA1Terj1ZTVFNLXRqR0ZFams/preview" width="640" height="480"></iframe></p>
+        <p><iframe src="https://drive.google.com/file/d/0BzCgA1Terj1ZTVFNLXRqR0ZFams/preview" width="640" height="380"></iframe></p>
 
 <h3>
 <a id="venez-voyez-et-vainquez-les-difficultés-de-lecture" class="anchor" href="#venez-voyez-et-vainquez-les-difficult%C3%A9s-de-lecture" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Venez, voyez et vainquez les difficultés de lecture.</h3>
 
 <ul>
-<li>Tester l'application AccessiDys<a href="https://accessidys.org/#/signup">en s'inscrivant ici</a>
+<li>Tester l'application AccessiDys <a href="https://accessidys.org/#/signup">en s'inscrivant ici</a>
 </li>
 <li><a href="https://github.com/accessidys/accessidys">Accéder au code source / Forker le projet</a>
 </li>
-<li><a href="https://github.com/AccessiDys/AccessiDys/wiki/Installation-documentation">Installer sont propre serveur AccessiDys</a>
+<li>Installez votre propre serveur AccessiDys <a href="https://github.com/AccessiDys/AccessiDys/wiki/Installation-documentation">à l'aide de la documentation</a>
 </li>
  <li>Rejoignez <a href="https://framalistes.org/sympa/subscribe/accessidys">la liste de discussion</a> et envoyez nous sur le <a href="mailto:contact.accessidys@framalistes.org">mail de contact</a> une demande pour rejoindre le slack ou le trello.</li>
-<li>Signalez une anomalie en remplissant<a href="https://github.com/accessidys/accessidys/issues/new">le formulaire sur github</a>
+<li>Signalez une anomalie ou une évolution en remplissant <a href="https://github.com/accessidys/accessidys/issues/new">le formulaire sur github</a>
 </li>
         </ul>
         
