--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
               <a href="https://trello.com/b/4kIxd74k/accessidys">Actions en cours</a> |
               <a href="https://accessi.slack.com">Slack</a>  |
               <a href="mailto:contact.accessidys@framalistes.org">Contact</a> |
-              <a href="https://github.com/AccessiDys/AccessiDys">Github</a>
+              <a href="https://github.com/AccessiDys/AccessiDys">Github</a> |
+              <a href="https://liberapay.com/accessidys/">Faire un don</a> |
+                
               </p>
           </section>
 <h3>
@@ -149,7 +151,7 @@ Et par le Centre National d’Enseignement à Distance (CNED), BP 80300, 86963 F
       <footer class="inner">
         <p class="copyright">Accessidys.GitHub.io maintained by <a href="https://github.com/accessidys">Accessidys</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-        <p>Vous pouvez soutenir Accessidys ici : <script src="https://liberapay.com/accesidys/widgets/button.js"></script></p>
+        <p>Vous pouvez soutenir Accessidys ici : <script src="https://liberapay.com/accessidys/widgets/button.js"></script></p>
       </footer>
     </div>
 
