--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a href="https://accessi.slack.com">Slack</a>  |
               <a href="mailto:contact.accessidys@framalistes.org">Contact</a> |
               <a href="https://github.com/AccessiDys/AccessiDys">Github</a> |
-              <a href="https://liberapay.com/accessidys/">Faire un don</a> |
+              <a href="https://liberapay.com/accessidys/">Faire un micro-don</a>
                 
               </p>
           </section>
