--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <script type="text/javascript" src="//dj5ag5n6bpdxo.cloudfront.net/libs/interactive/loader.js"></script>
 <script type="text/javascript">
     adways.interactive.createExperience({
-        "publication": "lS8M52J",
+        "publication": "7s1VH69",
         "container": "adways-interactive"
     }).load();
 </script>
