--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
          <!--<p><iframe src="https://drive.google.com/file/d/0BzCgA1Terj1ZTVFNLXRqR0ZFams/preview" width="640" height="360"></iframe></p>-->
 
 <h3>
-<a id="venez-voyez-et-vainquez-les-difficultés-de-lecture" class="anchor" href="#venez-voyez-et-vainquez-les-difficult%C3%A9s-de-lecture" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Venez, voyez et vainquez les difficultés de lecture.</h3>
+<a id="venez-voyez-et-vainquez-les-difficultés-de-lecture" class="anchor" href="#venez-voyez-et-vainquez-les-difficult%C3%A9s-de-lecture" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Venez, voyez et vainquez les difficultés de lecture</h3>
 
 <ul>
 <li>Tester l'application AccessiDys <a href="https://accessidys.org/#/signup">en s'inscrivant ici</a>
